--- a/index.html
+++ b/index.html
@@ -1,70 +1,47 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
+
+    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
+
     <title>Recipe-organizer by Nolordz</title>
-
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="javascripts/scale.fix.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
   </head>
+
   <body>
-    <div class="wrapper">
-      <header class="without-description">
+
+    <header>
+      <div class="container">
         <h1>Recipe-organizer</h1>
-        <p></p>
-        <p class="view"><a href="https://github.com/Nolordz/Recipe-Organizer">View the Project on GitHub <small>Nolordz/Recipe-Organizer</small></a></p>
-        <ul>
-          <li><a href="https://github.com/Nolordz/Recipe-Organizer/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/Nolordz/Recipe-Organizer/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/Nolordz/Recipe-Organizer">View On <strong>GitHub</strong></a></li>
-        </ul>
-      </header>
-      <section>
-        <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+        <h2></h2>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+        <section id="downloads">
+          <a href="https://github.com/Nolordz/Recipe-Organizer/zipball/master" class="btn">Download as .zip</a>
+          <a href="https://github.com/Nolordz/Recipe-Organizer/tarball/master" class="btn">Download as .tar.gz</a>
+          <a href="https://github.com/Nolordz/Recipe-Organizer" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
+        </section>
+      </div>
+    </header>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
-
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
-
-<h3>
-<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>
-<a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+    <div class="container">
+      <section id="main_content">
+        <p>During this week we started to look in to Django and how it works, we created a new project call Recipe Organizer. (the process of creating new virtual environment seems long and complicated, but its not once you follow the right steps).
+On this project we can see how we can manipulate data using python to create models, but first let me explain what is Django.
+DJANGO : is a web application frame work,written in python language,  that can be use to create complex data models(websites) in a more easy and friendly way, (Some examples that use django are websites like Mozilla and instagram). 
+Django has what is call "MVC" framework  , "Model View Controller" that uses relation between data models(Known as classes in python) and the database(Models), has also a system that handles and process request (View) with a web templating system, and a URL as a dispatcher (Controller).
+While we keep learning Django, we keep practicing by solving problems using python, problem number nine gave me lost a grey hairs , it looked complicated ,  I went ahead and write some code to come up for the solution.
+(problem was about calculating the square root of a number , then use Newton's method for  recursion to compare, then print the number of instances along with the square root .)
+I could not came up with anything, I revise over and over the instructions and compared to my code, until I found the problem....the problem was me !!! , yeap , I realized I was not understanding what kind of logic I needed to apply in order to solve the project, so I went and write down step for step what I wanted the program to do, then create the code for each line one by one , and it worked !!!.
+The lesson that I learned solving this project was, that as developer in order to write code, in order to solve problems, in order to create something, we must understand what we want the program to do, that means before we write anything in the console . I recommend to  sketch  it in a piece of paper , board or anything before put into code .
+I'm very exited to be in this class , just in three weeks  I have made a lot of progress, taking  in consideration my computer skills were not that great ,I'm feeling more competent every time.
+Looking forward for week four !!
+Noe.</p>
       </section>
     </div>
-    <footer>
-      <p>Project maintained by <a href="https://github.com/Nolordz">Nolordz</a></p>
-      <p>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></p>
-    </footer>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+
     
   </body>
 </html>
