--- a/Recipe-Organizer-Frontend/app/index.html
+++ b/Recipe-Organizer-Frontend/app/index.html
@@ -2,7 +2,7 @@
 <html class="no-js">
   <head>
     <meta charset="utf-8">
-    <title></title>
+
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -27,27 +27,28 @@
     <div class="container">
       <div class="header">
         <ul class="nav nav-pills pull-right">
-          <li class="active"><a ng-href="#">Home1</a></li>
-          <li><a ng-href="#/about">About</a></li>
-          <li><a ng-href="#">Contact</a></li>
+
+          <li><a ng-href="#">Home</a></li>
+          <li><a ng-href="#/recipes">Recipes</a></li>
+          <li><a ng-href="#/add-recipe">Add Recipe</a></li>
+          <li><a ng-href="#/about">About us</a></li>
+
 
         </ul>
-        <h3 class="text-muted">Welcome !</h3>
-           <input type="text" ng-model="Search"/> {{'Search'}}
-           <li ng-repeat="name in recipes | orderBy:'name'">{{name}}</li>
+
       </div>
 
       <div ng-view=""></div>
 
       <div class="footer">
-        <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
+
       </div>
     </div>
 
 
         <!--[if lt IE 9]>
     <script src="bower_components/es5-shim/es5-shim.js"></script>
-    <script src="bower_components/json3/lib/json3.min.js"></script>
+    <script src="bower_components/json:3/lib/json3.min.js"></script>
     <![endif]-->
 
     <!-- build:js(.) scripts/vendor.js -->
